# PayD

./: BOUNTY.md  BUILD_FIX_SUMMARY.md  CONTRACT_REGISTRY_STATUS.md  CONTRIBUTING.md  CONTRIBUTION_REWARD.md  CONTRIBUTORS.md  Cargo.toml  DB_SCHEMA.md  DOCKER_TROUBLESHOOTING.md  EMPLOYEE_REMOVAL_QUICK_REFERENCE.md  EMPLOYEE_REMOVAL_SUMMARY.md  ESCROW_UNIT_TESTS.md  GAS_OPTIMIZATION_ARCHITECTURE.md  GAS_OPTIMIZATION_CHECKLIST.md  GAS_OPTIMIZATION_IMPLEMENTATION.md  GAS_OPTIMIZATION_QUICK_REF.md  GAS_OPTIMIZATION_SUMMARY.md  GAS_OPTIMIZATION_TEST_PLAN.md  INTEGRATION_GUIDE.md  ISSUES.md  LICENSE  NOTIFICATION_SERVICE_IMPLEMENTATION.md  PR_DESCRIPTION_RATE_LIMITING.md  PR_DESCRIPTION_SEP_0001.md  PR_DESCRIPTION_TAX_SUPPORT.md  README.md  SECURITY.md  THROTTLING_CHECKLIST.md  TRANSACTION_FEE_ESTIMATION_SUMMARY.md  TRANSACTION_OVERLAY_IMPLEMENTATION.md  VERIFICATION_GUIDE.md  demo-contract-registry.md  environments.toml  issue.md  package.json  pr.md  test-contract-registry.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
backend/: .env.example  DOCKER_TROUBLESHOOTING.md  DOCKER_TROUBLESHOOTING_SUMMARY.md  Dockerfile  EMPLOYEE_API.md  PERFORMANCE_BONUS_FEATURE.md  README.md  SOROBAN_EVENT_INDEXING.md  TODO.md  docker-compose.monitoring.yml  docker-compose.yml  openapi.json  package-lock.json  package.json  tsconfig.json
backend/kibana/: kibana.yml
backend/prometheus/: prometheus.yml
backend/scripts/: docker-diagnose.sh  docker-health-check.sh
backend/src/: app.ts  index.ts
contracts/asset_path_payment/: Cargo.toml
contracts/bulk_payment/: Cargo.toml
contracts/bulk_payment/src/: lib.rs  test.rs
contracts/cross_asset_payment/: Cargo.toml
contracts/cross_asset_payment/src/: lib.rs  test.rs  test_escrow.rs
contracts/revenue_split/: Cargo.toml
contracts/revenue_split/src/: lib.rs  test.rs
contracts/smart_wallet/: Cargo.toml  README.md
contracts/smart_wallet/src/: test.rs
contracts/vesting_escrow/: Cargo.toml
contracts/vesting_escrow/src/: lib.rs  test.rs  test_escrow_logic.rs
docs/: CONTRACT_ARCHIVAL_STRATEGY.md  CONTRACT_STORAGE_LAYOUT.md  DEPLOYMENT_GUIDE_VERCEL_RENDER.md  EMPLOYEE_REMOVAL_MODAL_GUIDE.md  EmployeeEntry.example.tsx  FEE_ESTIMATION_MODAL_GUIDE.md  FILENAMING_CONVENTIONS.md  LOCAL_CONTRACT_BOOTSTRAP.md  MULTI_SIG_SECURITY_MODEL.md  STAGING_ISSUES.md  whitepaper.md
frontend/: PR_DESCRIPTION.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
src/: App.module.css
src/components/: ConnectAccount.tsx  EmployeeList.tsx
src/pages/: Debugger.tsx  (+2 more)
tests/: auth-flow-docs.test.mjs  contributors-docs.test.mjs  deployment-guide-docs.test.mjs  env-example-docs.test.mjs  filenaming-guide-docs.test.mjs  issue-templates.test.mjs  readme-quick-start.test.mjs
(+284 files in other folders)
