[package]
name = "smart_wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Contract account example with mixed Ed25519 and secp256k1 signature verification"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
ed25519-dalek = "2.1.1"
k256 = "0.13.4"
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]
